# animated-happiness

./: CMakeLists.txt  config.cpp
source_code/: main.cpp
source_code/Config/: config.h
source_code/Sound/: Sound.cpp  Sound.h
source_code/Translate/: Translate.cpp  Translate.h
